# GesturePaint

./: .gitattributes  .gitignore  PROJECT_STRUCTURE.md  README.md  check_env.py  main.py  pyproject.toml
models/lora/: config_lora-20260209-132113.toml  config_lora-20260209-132342.toml  config_lora-20260209-133029.toml  config_lora-20260209-135038.toml  config_lora-20260209-150558.toml  my_university_style-000002.safetensors  my_university_style-000004.safetensors  my_university_style-000006.safetensors  my_university_style-000008.safetensors  my_university_style-000010.safetensors  my_university_style-000012.safetensors  my_university_style-000014.safetensors  my_university_style.safetensors  my_university_style_20260209-131559.json  my_university_style_20260209-132549.json  my_university_style_20260209-135038.json  my_university_style_20260209-150158.json
src/core/: gesture_detector.py
src/features/: art_result_dialog.py  const.py  custom_dialog.py  dialog_manager.py  doodle_to_art_system.py  face_swapper.py  gesture_commands.py  school_style_picture_generator.py  smart_voice_controller.py  voice_effects.py  voice_prompt_generator.py  voice_recognition.py  voice_ui.py  voice_visualizer.py
src/utils/: config.json
